@@ -63,8 +63,8 @@ int   GetAttrFromTable(lua_State *L);
 int   GetIntFromArray(lua_State *L, int index);
 int   luaLF_FieldError(lua_State *L, const char* key, const char* expected_typename);
 int   luaLF_SlotError(lua_State *L, int key, const char* expected_typename);
-void  PushPanelItem(lua_State *L, const struct PluginPanelItem *PanelItem);
-void  PushPanelItems(lua_State *L, const struct PluginPanelItem *PanelItems, size_t ItemsNumber);
+void  PushPanelItem(lua_State *L, const struct PluginPanelItem *PanelItem, int NoUserData);
+void  PushPanelItems(lua_State *L, const struct PluginPanelItem *PanelItems, size_t ItemsNumber, int NoUserData);
 void  PutMouseEvent(lua_State *L, const MOUSE_EVENT_RECORD* rec, BOOL table_exist);
 unsigned __int64 GetFileSizeFromTable(lua_State *L, const char *key);
 FILETIME GetFileTimeFromTable(lua_State *L, const char *key);
