@@ -1,3 +1,7 @@
+shmuel 01.08.2020 14:45:37 +0200 - build 751
+
+1. LuaFAR: preparations for search in plugins' directories.
+
 shmuel 06.07.2020 11:48:04 +0300 - build 750
 
 1. Minor fix related to build 738.
